--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <button id="actionButton">Click Me Here!</button>
+        <button id="actionButton">Click Me Here Now!</button>
         <div id="duck-container">
             <!-- Ducks will be dynamically added here -->
         </div>
