--- a/public/index.html
+++ b/public/index.html
@@ -3,19 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Firebase Ducks</title>
+    <title>Firebase Counter</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <button id="actionButton">Click Me Here Now!</button>
-        <div id="duck-container">
-            <!-- Ducks will be dynamically added here -->
-        </div>
+    <div class="counter-container">
+        <h1>Persistent Counter</h1>
+        <div id="counter">0</div>
+        <button id="increment">Increment</button>
     </div>
 
-    <script src="https://www.gstatic.com/firebasejs/9.1.2/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.1.2/firebase-analytics.js"></script>
-    <script src="app.js"></script>
+    <script type="module" src="app.js"></script>
 </body>
 </html>
