added style and loading thingyh

--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,14 @@
 </head>
 <body>
     <div class="counter-container">
-        <h1>Persistent Counter</h1>
-        <div id="counter">0</div>
-        <button id="increment">Increment</button>
+        <h1>🔥 Real-Time Counter</h1>
+
+        <div id="loading" class="loader"></div>
+        <div id="counter" class="hidden">0</div>
+
+        <button id="increment">
+            <span>+</span> Increment
+        </button>
     </div>
 
     <script type="module" src="app.js"></script>
