--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
 
         <div id="loading" class="loader"></div>
         <div id="counter" class="hidden">0</div>
+        <div id="star" src="images/star.png" alt="Star!" class="star hidden"/>
 
         <button id="increment">
             <span>+</span> Increment
