star posittioning change to counter location

--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,13 @@
         <h1>🔥 Real-Time Counter</h1>
 
         <div id="loading" class="loader"></div>
-        <div id="counter" class="hidden">0</div>
+        <div class="counter-wrapper">
+            <div id="counter" class="hidden">0</div>
+            <div id="star" src="images/star.png" alt="Star!" class="star hidden"/>
+        </div>
         <button id="increment">
             <span>+</span> Increment
         </button>
-        <div id="star" src="images/star.png" alt="Star!" class="star hidden"/>
     </div>
 
     <script type="module" src="app.js"></script>
