--- a/public/index.html
+++ b/public/index.html
@@ -1,25 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Firebase Counter</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Accordion Window</title>
+  <style>
+    body {
+      margin: 0;
+      height: 100vh;
+      background: radial-gradient(circle at center, #f9f6f2, #d7ccc8);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-family: sans-serif;
+    }
+    #accordion {
+      width: 300px;
+      height: 300px;
+      background: url('https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fcdn.britannica.com%2F34%2F150934-050-AB388AF8%2FPiano-accordion.jpg&f=1&nofb=1&ipt=03dd73b19345f310e21dac2e0f967290f01782506d909842d810c18df9e08d18') center/cover no-repeat;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 1.5rem;
+      border-radius: 12px;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+      transition: transform 0.3s ease;
+    }
+  </style>
 </head>
 <body>
-    <div class="counter-container">
-        <h1>🔥 Real-Time Counter</h1>
+  <div id="accordion"></div>
 
-        <div id="loading" class="loader"></div>
-        <div class="counter-wrapper">
-            <div id="counter" class="hidden">0</div>
-            <div id="star" src="images/star.png" alt="Star!" class="star hidden"/>
-        </div>
-        <button id="increment">
-            <span>+</span> Increment
-        </button>
-    </div>
+  <audio id="expand1" src="http://codeskulptor-demos.commondatastorage.googleapis.com/GalaxyInvaders/alien_shoot.wav"></audio>
+  <audio id="expand2" src="http://codeskulptor-demos.commondatastorage.googleapis.com/GalaxyInvaders/alien_shoot.wav"></audio>
+  <audio id="expand3" src="http://codeskulptor-demos.commondatastorage.googleapis.com/GalaxyInvaders/alien_shoot.wav"></audio>
+  <audio id="shrink1" src="http://codeskulptor-demos.commondatastorage.googleapis.com/GalaxyInvaders/bonus.wav"></audio>
+  <audio id="shrink2" src="http://codeskulptor-demos.commondatastorage.googleapis.com/GalaxyInvaders/bonus.wav"></audio>
+  <audio id="shrink3" src="http://codeskulptor-demos.commondatastorage.googleapis.com/GalaxyInvaders/bonus.wav"></audio>
 
-    <script type="module" src="app.js"></script>
+  <script>
+    let lastWidth = window.innerWidth;
+
+    const getNote = (delta) => {
+      if (delta > 150) return 2;
+      if (delta > 50) return 1;
+      return 0;
+    };
+
+    window.addEventListener('resize', () => {
+      const newWidth = window.innerWidth;
+      const delta = Math.abs(newWidth - lastWidth);
+      const note = getNote(delta);
+      const accordion = document.getElementById('accordion');
+
+      if (newWidth > lastWidth) {
+        const expandNote = document.getElementById(`expand${note + 1}`);
+        expandNote.currentTime = 0;
+        expandNote.play();
+        accordion.style.transform = 'scale(1.1)';
+      } else if (newWidth < lastWidth) {
+        const shrinkNote = document.getElementById(`shrink${note + 1}`);
+        shrinkNote.currentTime = 0;
+        shrinkNote.play();
+        accordion.style.transform = 'scale(0.9)';
+      }
+
+      setTimeout(() => {
+        accordion.style.transform = 'scale(1)';
+      }, 300);
+
+      lastWidth = newWidth;
+    });
+  </script>
 </body>
 </html>
