breadcrumb for ci sanity

--- a/duck_test/public/index.html
+++ b/duck_test/public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="counter-container">
-        <h1>🔥 Real-Time Counter</h1>
+        <h1>🔥 Real Time Counter</h1>
 
         <div id="loading" class="loader"></div>
         <div class="counter-wrapper">
